# agentstore

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agentstore/: __init__.py  cli.py  config.py  data.py  graph.py  llm.py  server.py  state.py  supervisor.py
agentstore/agents/: __init__.py  _factory.py  customer.py  inventory.py  reviews.py  sales.py
agentstore/tools/: __init__.py  customer_tools.py  inventory_tools.py  review_tools.py  sales_tools.py
data/: categories.json  customers.json  orders.json  products.json  reviews.json  sales_summary.json
examples/: run_examples.py
frontend/: index.html
tests/: conftest.py  test_graph.py  test_server.py  test_tools.py
